Updated he, new translator

--- a/CustomRPC/About.he.resx
+++ b/CustomRPC/About.he.resx
@@ -136,6 +136,6 @@
     <value>True</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>עלינו</value>
+    <value>מידע</value>
   </data>
 </root>
