Updated ar, he, ko, vi, zh

--- a/CustomRPC/MainForm.ar.resx
+++ b/CustomRPC/MainForm.ar.resx
@@ -437,4 +437,7 @@
   <data name="darkModeToolStripMenuItem.Text" xml:space="preserve">
     <value>الوضع الداكن</value>
   </data>
+  <data name="supportersToolStripMenuItem.Text" xml:space="preserve">
+    <value>الداعمين</value>
+  </data>
 </root>
