--- a/CustomRPC/MainForm.zh-Hans.resx
+++ b/CustomRPC/MainForm.zh-Hans.resx
@@ -444,4 +444,7 @@
   <data name="labelSmallKey.ToolTip" xml:space="preserve">
     <value>小图示的档案名称或URL连结。</value>
   </data>
+  <data name="supportersToolStripMenuItem.Text" xml:space="preserve">
+    <value>赞助者</value>
+  </data>
 </root>
