--- a/CustomRPC/MainForm.he.resx
+++ b/CustomRPC/MainForm.he.resx
@@ -455,4 +455,7 @@
   <data name="labelLargeKey.ToolTip" xml:space="preserve">
     <value>השם של התוסף בשביל גדולה קטנה או לינק לתמונה</value>
   </data>
+  <data name="supportersToolStripMenuItem.Text" xml:space="preserve">
+    <value>תומכים</value>
+  </data>
 </root>
