--- a/CustomRPC/MainForm.pl.resx
+++ b/CustomRPC/MainForm.pl.resx
@@ -396,4 +396,7 @@ Jeżeli ma mieć jakikolwiek efekt, obydwa pola muszą być większe od 0.</valu
   <data name="labelLargeKey.ToolTip" xml:space="preserve">
     <value>Nazwa dużego zdjęcia lub link.</value>
   </data>
+  <data name="supportersToolStripMenuItem.Text" xml:space="preserve">
+    <value>Wspierający</value>
+  </data>
 </root>
