--- a/CustomRPC/MainForm.id.resx
+++ b/CustomRPC/MainForm.id.resx
@@ -495,4 +495,7 @@ agar bekerja, kedua bidang harus lebih dari 0.</value>
   <data name="labelLargeKey.ToolTip" xml:space="preserve">
     <value>Nama aset untuk gambar besar atau URL gambar.</value>
   </data>
+  <data name="supportersToolStripMenuItem.Text" xml:space="preserve">
+    <value>Pendukung</value>
+  </data>
 </root>
